Fix gallery wrapper and heading alignment

--- a/main.css
+++ b/main.css
@@ -391,12 +391,14 @@ footer ul a:last-of-type {
   }
 
   .gallery-wrapper {
+    width: 80%;
+    justify-content: space-between;
     flex-direction: row;
     flex-wrap: wrap;
   }
 
   .gallery-item {
-    width: 40%;
+    width: 45%;
     margin: 1em 1em 0 0;
   }
 
@@ -415,7 +417,7 @@ footer ul a:last-of-type {
   }
 
   .gallery-wrapper {
-    width: 63%;
+    width: 60%;
   }
 
   .gallery-item {
